<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView android:id="@+id/stat_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shadowColor="#00FF00"
        android:shadowRadius="1"
        android:gravity="center_horizontal"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/stat_min" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/stat_max" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/stat_ave" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/stat_var" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stat_x" />
        <TextView android:id="@+id/stat_x_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp" />
        <TextView android:id="@+id/stat_x_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp" />
        <TextView android:id="@+id/stat_x_ave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp" />
        <TextView android:id="@+id/stat_x_var"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stat_y" />
        <TextView android:id="@+id/stat_y_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp" />
        <TextView android:id="@+id/stat_y_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp" />
        <TextView android:id="@+id/stat_y_ave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp" />
        <TextView android:id="@+id/stat_y_var"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/stat_z" />
        <TextView android:id="@+id/stat_z_min"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp" />
        <TextView android:id="@+id/stat_z_max"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp" />
        <TextView android:id="@+id/stat_z_ave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:layout_marginRight="1dp"
            android:layout_marginEnd="1dp" />
        <TextView android:id="@+id/stat_z_var"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3" />
    </TableRow>

</TableLayout>